--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "newapp",
+  "name": "newsknow",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.4.5",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "react-top-loading-bar": "^2.3.1",
-    "sort-by": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "lucide-react": "^0.263.1",
+    "framer-motion": "^10.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 }
